aks-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: #{namespace}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #{namespace}-ingress
  namespace: #{namespace}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec: 
  tls:
  - hosts:
    - #{FQDN}
    secretName: #{TLS_Secret}
  rules:
  - host: #{FQDN}
    http:
      paths:
      - backend:
          serviceName: #{namespace}-webservice
          servicePort: 80
        path: /(.*)
---
apiVersion: v1
kind: Service
metadata:
  name: #{namespace}-webservice
  namespace: #{namespace}
spec:
  selector:
    app: #{namespace}-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{namespace}-web
  namespace: #{namespace}
  labels:
    app: #{namespace}-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: #{namespace}-web
  template:
    metadata:
      labels:
        app: #{namespace}-web
    spec:
      containers:
      - name: #{namespace}-web
        image: example.azurecr.io/#{namespace}/web:#{build}
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "400m"
      imagePullSecrets:
      - name: dockersecret
